docs(swagger): update swagger docs for juz with progress endpoint
Add swagger documentation for the new endpoint that returns all Juz combined with user's hatam progress
